// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Notification > Snapshots > matches snapshot for ERROR notification 1`] = `
<div>
  <div
    class="bg-red-100 border-red-400 text-red-700 border px-4 py-3 rounded relative mb-4 flex justify-between items-center"
    role="alert"
  >
    <span
      class="block text-base font-normal sm:inline"
    >
      Test message
    </span>
    <button
      aria-label="Close"
      class="ml-4"
    >
      <span
        aria-hidden="true"
        class="text-xl"
      >
        ×
      </span>
    </button>
  </div>
</div>
`;

exports[`Notification > Snapshots > matches snapshot for INFO notification 1`] = `
<div>
  <div
    class="bg-blue-100 border-blue-400 text-blue-700 border px-4 py-3 rounded relative mb-4 flex justify-between items-center"
    role="alert"
  >
    <span
      class="block text-base font-normal sm:inline"
    >
      Test message
    </span>
    <button
      aria-label="Close"
      class="ml-4"
    >
      <span
        aria-hidden="true"
        class="text-xl"
      >
        ×
      </span>
    </button>
  </div>
</div>
`;

exports[`Notification > Snapshots > matches snapshot for SUCCESS notification 1`] = `
<div>
  <div
    class="bg-green-100 border-green-400 text-green-700 border px-4 py-3 rounded relative mb-4 flex justify-between items-center"
    role="alert"
  >
    <span
      class="block text-base font-normal sm:inline"
    >
      Test message
    </span>
    <button
      aria-label="Close"
      class="ml-4"
    >
      <span
        aria-hidden="true"
        class="text-xl"
      >
        ×
      </span>
    </button>
  </div>
</div>
`;

exports[`Notification > Snapshots > matches snapshot for WARNING notification 1`] = `
<div>
  <div
    class="bg-yellow-100 border-yellow-400 text-yellow-700 border px-4 py-3 rounded relative mb-4 flex justify-between items-center"
    role="alert"
  >
    <span
      class="block text-base font-normal sm:inline"
    >
      Test message
    </span>
    <button
      aria-label="Close"
      class="ml-4"
    >
      <span
        aria-hidden="true"
        class="text-xl"
      >
        ×
      </span>
    </button>
  </div>
</div>
`;

exports[`Notification > Snapshots > matches snapshot with custom message 1`] = `
<div>
  <div
    class="bg-blue-100 border-blue-400 text-blue-700 border px-4 py-3 rounded relative mb-4 flex justify-between items-center"
    role="alert"
  >
    <span
      class="block text-base font-normal sm:inline"
    >
      Custom test message
    </span>
    <button
      aria-label="Close"
      class="ml-4"
    >
      <span
        aria-hidden="true"
        class="text-xl"
      >
        ×
      </span>
    </button>
  </div>
</div>
`;
